Fix: remove margin-top on navbar causing gap and format hamburger

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -237,8 +237,19 @@ a:hover {
 }
 
 .navbar-collapse {
-    padding: 1.5rem 0 0;
     background-color: var(--primary-color);
+}
+
+
+.navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 2rem;
+    margin-top: 5rem;
+    background-color: var(--accent-color);
+    background-image: none;
+    border: 1px solid;
+    border-radius: 10px;
 }
 
 .panel {
